apps/base/karakeep/karakeep-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep-ingressroute
  namespace: karakeep
  annotations:
    gethomepage.dev/href: "https://karakeep.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Karakeep"
    gethomepage.dev/description: "Karakeep"
    gethomepage.dev/app: karakeep
    gethomepage.dev/group: "Apps"
    gethomepage.dev/icon: "sh-karakeep.png"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`karakeep.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: karakeep-app
          port: 3000
          scheme: http
  tls: {}
